--- a/pages/16759.html
+++ b/pages/16759.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/6712/#Item_4" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -513,7 +512,7 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-supersymmetric+QFT'>6d (2,0)-supersymmetric QFT</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/6d+%282%2C0%29-superconformal+QFT'>6d (2,0)-supersymmetric QFT</a></p>
 </li>
 </ul>
 </li>
@@ -584,7 +583,7 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Michael+Duff'>Mike Duff</a></p>
 
-<p><em>The world in eleven dimensions: Supergravity, Supermembranes and <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory</em></p>
+<p><em>The world in eleven dimensions: Supergravity, Supermembranes and <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory</em></p>
 
 <p>IoP 1999</p>
 
@@ -603,7 +602,7 @@ margin-left: 0em;
 <p>For related texts see at <em><a class='existingWikiWord' href='/nlab/show/books+about+string+theory'>books about string theory</a></em>.</p>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#1_elevendimensional_supergravity'>1 Eleven-dimensional supergravity</a></li><li><a href='#2_the_elevendimensional_supermembrane'>2 The eleven-dimensional supermembrane</a></li><li><a href='#3_the_elevendimensional_superfivebrane'>3 The eleven-dimensional superfivebrane</a></li><li><a href='#4_theory_before_theory_was_cool'>4 <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory (before <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory was cool)</a></li><li><a href='#5_intersecting_branes_and_black_holes'>5 Intersecting branes and black holes</a></li><li><a href='#6_theory_and_duality'>6 <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory and duality</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#1_elevendimensional_supergravity'>1 Eleven-dimensional supergravity</a></li><li><a href='#2_the_elevendimensional_supermembrane'>2 The eleven-dimensional supermembrane</a></li><li><a href='#3_the_elevendimensional_superfivebrane'>3 The eleven-dimensional superfivebrane</a></li><li><a href='#4_theory_before_theory_was_cool'>4 <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory (before <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory was cool)</a></li><li><a href='#5_intersecting_branes_and_black_holes'>5 Intersecting branes and black holes</a></li><li><a href='#6_theory_and_duality'>6 <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory and duality</a></li></ul></div>
 <h2 id='1_elevendimensional_supergravity'>1 Eleven-dimensional supergravity</h2>
 
 <p>On <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a></p>
@@ -616,7 +615,7 @@ margin-left: 0em;
 
 <p>On the <a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a></p>
 
-<h2 id='4_theory_before_theory_was_cool'>4 <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory (before <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory was cool)</h2>
+<h2 id='4_theory_before_theory_was_cool'>4 <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory (before <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory was cool)</h2>
 
 <p>on <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a></p>
 
@@ -630,14 +629,14 @@ margin-left: 0em;
 
 <p>as well as <a class='existingWikiWord' href='/nlab/show/black+holes+in+string+theory'>black holes in string theory</a> and <a class='existingWikiWord' href='/nlab/show/Bekenstein-Hawking+entropy'>Bekenstein-Hawking entropy</a></p>
 
-<h2 id='6_theory_and_duality'>6 <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory and duality</h2>
+<h2 id='6_theory_and_duality'>6 <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory and duality</h2>
 
 <p>On <a class='existingWikiWord' href='/nlab/show/duality+in+string+theory'>duality in string theory</a>, mostly <a class='existingWikiWord' href='/nlab/show/S-duality'>S-duality</a> and <a class='existingWikiWord' href='/nlab/show/dual+heterotic+string+theory'>dual heterotic string theory</a>, ending with <a class='existingWikiWord' href='/nlab/show/AdS-CFT'>AdS-CFT</a></p>
 
 <p>On whether “M” is really for “<a class='existingWikiWord' href='/nlab/show/supermembrane'>membrane</a>” after all:</p>
 
 <blockquote>
-<p>In other words, perhaps <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>11</mn></mrow><annotation encoding='application/x-tex'>D = 11</annotation></semantics></math> supergravity together with <a class='existingWikiWord' href='/nlab/show/M-brane'>its BPS configurations</a>: plane wave, membrane, fivebrane, KK monopole and the <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>11</mn></mrow><annotation encoding='application/x-tex'>D = 11</annotation></semantics></math> embedding of the Type II eightbraneare are all there is to <math class='maruku-mathml' display='inline' id='mathml_c9a9551f4eebc7c2cf91a7cedbfae5b3421a50d1_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory and that we need look no further for new degrees of freedom. (p. 329)</p>
+<p>In other words, perhaps <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>11</mn></mrow><annotation encoding='application/x-tex'>D = 11</annotation></semantics></math> supergravity together with <a class='existingWikiWord' href='/nlab/show/M-brane'>its BPS configurations</a>: plane wave, membrane, fivebrane, KK monopole and the <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>D</mi><mo>=</mo><mn>11</mn></mrow><annotation encoding='application/x-tex'>D = 11</annotation></semantics></math> embedding of the Type II eightbraneare are all there is to <math class='maruku-mathml' display='inline' id='mathml_dc04b2f72e634377f146fc1f50a817e258917b76_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>M</mi></mrow><annotation encoding='application/x-tex'>M</annotation></semantics></math>-theory and that we need look no further for new degrees of freedom. (p. 329)</p>
 </blockquote>
 
 <p>Concluding with:</p>
@@ -652,25 +651,26 @@ margin-left: 0em;
 <li><a class='existingWikiWord' href='/nlab/show/Gregory+Moore'>Greg Moore</a>, <em><a class='existingWikiWord' href='/nlab/show/Physical+Mathematics+and+the+Future'>Physical Mathematics and the Future</a></em>, talk at <a href='http://physics.princeton.edu/strings2014/'>Strings 2014</a></li>
 </ul>
 
-<p>whith its section 12: “Keep true to the dreams of thy youth: M-theory”</p>
+<p>with its section 12: “Keep true to the dreams of thy youth: M-theory”</p>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/reference'>reference</a></div></p>
 </div>
 
 <div class="revisedby">
-  Revised on April 13, 2017 13:15:58 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
-  (192.41.132.70)
+  <p>
+  Last revised on May 15, 2018 at 04:15:12.
+  See the <a href="https://ncatlab.org/nlab/history/The World in Eleven Dimensions" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/The+World+in+Eleven+Dimensions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/The+World+in+Eleven+Dimensions/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/The+World+in+Eleven+Dimensions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/The+World+in+Eleven+Dimensions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/The+World+in+Eleven+Dimensions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/The+World+in+Eleven+Dimensions/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/The+World+in+Eleven+Dimensions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/The+World+in+Eleven+Dimensions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/The World in Eleven Dimensions/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/The+World+in+Eleven+Dimensions" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/The+World+in+Eleven+Dimensions" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/The+World+in+Eleven+Dimensions" id="view_source" rel="nofollow">Source</a>
