--- a/pages/16534.html
+++ b/pages/16534.html
@@ -578,7 +578,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#12_m5brane'>1/2 M5-brane</a></li><li><a href='#estring'>E-String</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#examples'>Examples</a><ul><li><a href='#12_m5brane'>1/2 M5-brane</a></li><li><a href='#estring'>E-String</a></li><li><a href='#string_network'>String network</a></li><li><a href='#membrane_triple_junction'>Membrane triple junction</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p><a class='existingWikiWord' href='/nlab/show/intersection'>intersection</a> of <a class='existingWikiWord' href='/nlab/show/brane'>branes</a> in <a class='existingWikiWord' href='/nlab/show/string+theory'>string theory</a></p>
@@ -588,7 +588,7 @@ margin-left: 0em;
 <h3 id='12_m5brane'>1/2 M5-brane</h3>
 
 <p><a class='existingWikiWord' href='/nlab/show/M5-brane'>M5-brane</a> with <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+monopole'>KK-monopole</a>:</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_a28f832f1e5a469dd088948cb7d28066a3d47292_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>|</mo><mi>M</mi><mn>5</mn><mo>,</mo><mi>KK</mi><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd></mtr> <mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>1</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>2</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>3</mn></msub></mtd> <mtd><mi>z</mi></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>10</mn></msub></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_dd764bcb0f8a0c9080ae9699aa204cf4a59aa48e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><mn>5</mn><mo stretchy='false'>|</mo><mi>M</mi><mn>5</mn><mo>,</mo><mi>KK</mi><mo stretchy='false'>)</mo><mo>=</mo><mrow><mo>{</mo><mrow><mtable><mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><mo lspace='verythinmathspace' rspace='0em'>−</mo></mtd></mtr> <mtr><mtd><msub><mi>x</mi> <mn>0</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>1</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>2</mn></msub></mtd> <mtd><msub><mi>A</mi> <mn>3</mn></msub></mtd> <mtd><mi>z</mi></mtd> <mtd><msub><mi>x</mi> <mn>5</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>6</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>7</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>8</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>9</mn></msub></mtd> <mtd><msub><mi>x</mi> <mn>10</mn></msub></mtd></mtr></mtable></mrow></mrow></mrow><annotation encoding='application/x-tex'>
   (5\vert M5, KK)
   =
   \left\{
@@ -607,6 +607,14 @@ margin-left: 0em;
 <h3 id='estring'>E-String</h3>
 
 <p>See at <em><a class='existingWikiWord' href='/nlab/show/E-string'>E-string</a></em></p>
+
+<h3 id='string_network'>String network</h3>
+
+<p>See at <em><a class='existingWikiWord' href='/nlab/show/string+network'>string network</a></em>.</p>
+
+<h3 id='membrane_triple_junction'>Membrane triple junction</h3>
+
+<p>see at <em><a class='existingWikiWord' href='/nlab/show/triple+membrane+junction'>membrane triple junction</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -648,14 +656,14 @@ margin-left: 0em;
 
 <div class="revisedby">
   <p>
-  Last revised on May  9, 2018 at 12:07:31.
+  Last revised on May 17, 2018 at 05:49:04.
   See the <a href="https://ncatlab.org/nlab/history/brane intersection" style="color: #005c19">history</a> of this page for a list of all contributions to it.
   </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/brane+intersection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/brane+intersection/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/brane+intersection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/brane+intersection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/brane+intersection" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/brane+intersection/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/brane+intersection" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/brane+intersection" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   | <a href="https://ncatlab.org/nlab/show/brane intersection/cite" style="color: black">Cite</a>
   <span class="views">
     | Views:
