--- a/pages/429.html
+++ b/pages/429.html
@@ -290,12 +290,11 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/all_pages" accesskey="A" title="List of all pages">All Pages</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -565,8 +564,8 @@ margin-left: 0em;
 <h2 id='references'>References</h2>
 
 <ul>
-<li>
-<p><a class='existingWikiWord' href='/nlab/show/Martin+Hyland'>Martin Hyland</a> and <a class='existingWikiWord' href='/nlab/show/John+Power'>John Power</a>, <em>The category theoretic understanding of universal algebra: Lawvere theories and monads</em> (<a href='http://www.dpmms.cam.ac.uk/~martin/Research/Publications/2007/hp07.pdf'>pdf</a>).</p>
+<li id='HylandPower07'>
+<p><a class='existingWikiWord' href='/nlab/show/Martin+Hyland'>Martin Hyland</a>, <a class='existingWikiWord' href='/nlab/show/John+Power'>John Power</a>, <em>The category theoretic understanding of universal algebra: Lawvere theories and monads</em> (<a href='http://www.dpmms.cam.ac.uk/~martin/Research/Publications/2007/hp07.pdf'>pdf</a>).</p>
 </li>
 
 <li>
@@ -580,23 +579,28 @@ margin-left: 0em;
 <li>
 <p><a class='existingWikiWord' href='/nlab/show/Max+Kelly'>Max Kelly</a> and <a class='existingWikiWord' href='/nlab/show/John+Power'>John Power</a>, <em>Adjunctions whose counits are coequalizers, and presentations of finitary enriched monads</em>, JPAA 89, 1993.</p>
 </li>
+
+<li id='BaiGuoLoday11'>
+<p>Chengming Bai, Li Guo, <a class='existingWikiWord' href='/nlab/show/Jean-Louis+Loday'>Jean-Louis Loday</a>, <em><a href='http://andromeda.rutgers.edu/~liguo/OUA10/book.htm'>Proceedings of the China-France Summer Institute on Operads and Universal Algebra</a></em>, World Scientific 2011 (<a href='http://andromeda.rutgers.edu/~liguo/OUA10/operadua.html'>web</a>)</p>
+</li>
 </ul>
 </div>
 
 <div class="revisedby">
-  Revised on July 16, 2016 18:05:10 
-  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (100.42.253.133)
+  <p>
+  Last revised on May 17, 2018 at 07:09:19.
+  See the <a href="https://ncatlab.org/nlab/history/universal algebra" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/universal+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+algebra/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/universal+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/universal+algebra" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/universal+algebra/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/universal+algebra" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/universal+algebra" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/universal algebra/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/universal+algebra" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/universal+algebra" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/universal+algebra" id="view_source" rel="nofollow">Source</a>
